--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,14 @@
-.header{
+.header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background-color: var(--bg-color);
   z-index: var(--z-fixed);
-  border-bottom: 5px solid var(--main-color);
+  border-bottom: 0.5rem solid var(--main-color);
 }
 
-.navbarTop{
+.navbarTop {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,7 +16,7 @@
   margin: 0 var(--m-0-5);
 }
 
-.navbarTop__contact{
+.navbarTop__contact {
   display: flex;
   gap: 1rem;
   font-size: var(--smaller-font-size);
@@ -24,14 +24,14 @@
   align-items: center;
 }
 
-.navbarTop__social{
+.navbarTop__social {
   display: flex;
   align-items: center;
   font-size: var(--normal-font-size);
-  gap: .25rem;
+  gap: 0.25rem;
 }
 
-.navbarBottom{
+.navbarBottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,22 +39,67 @@
   margin: 0 var(--m-2);
 }
 
-.navbarBottom__logo{
+.navbarBottom__logo {
   width: 4rem;
   display: flex;
 }
 
-.navbarBottom__navMenu{
+.navbarBottom__navMenu {
   display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-.navbarBottom__navList{
-  display: flex;
+.navbarBottom__navList {
+  display: grid;
+  gap: 1.5rem;
   grid-template-columns: repeat(5, auto);
 }
 
-.navbarBottom__navItem{
+.navbarBottom__navItem {
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
 }
 
+.navbarBottom__button {
+  padding: 0.5rem 1rem;
+}
+
+.navbarBottom__menuIcon {
+  display: none;
+}
+
+/* BREAKPOINTS */
+/* FOR MEDIUM DEVICE */
+@media screen and (max-width: 768px) {
+  .navbarBottom__navMenu {
+    border-left: 0.25rem solid var(--main-color);
+    position: fixed;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    bottom: 0;
+    right: 0;
+    height: calc(100% - var(--header-height));
+    width: 60%;
+    background-color: var(--bg-color);
+    z-index: -50;
+  }
+
+  .navbarBottom__navList {
+    margin: auto;
+    grid-template-columns: repeat(1, auto);
+    gap: 3rem;
+  }
+
+  .navbarBottom__navItem {
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
+  }
+
+  .navbarBottom__button.button {
+    display: none;
+  }
+
+  .navbarBottom__menuIcon {
+    display: block;
+    font-size: var(--h3-font-size);
+  }
+}
