--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --header-height: 7rem;
+  --header-height: 7.5rem;
 
   /* COLORS */
   --main-color: #429bce;
@@ -36,8 +36,9 @@
 
   /* Z INDEX */
   --z-tooltip: 10;
-  --z-fixed: 100;
-  --z-modal: 200;
+  --z-menu: 25;
+  --z-fixed: 50;
+  --z-modal: 100;
 }
 
 /* RESPONSIVE TYPO */
@@ -104,7 +105,37 @@ img {
   margin-right: auto;
 }
 
-.grid{
-  display: grid;
-  gap: 1.5rem;
+/* BUTTON */
+.button{
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  border: 2px solid var(--main-color);
+  border-radius: 3rem;
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+  display: inline-block;
+}
+
+/* BREAKPOINTS */
+/* FOR LARGE DEVICE */
+@media screen and (max-width: 992px) {
+
+}
+
+/* FOR MEDIUM DEVICE */
+@media screen and (max-width: 768px) {
+
+}
+
+/* FOR TABLET DEVICE */
+@media screen and (max-width: 576px) {
+  
+}
+
+/* FOR SMALL DEVICE */
+@media screen and (max-width: 350px) {
+  :root{
+    --big-font-size: 2.25rem
+  }
+
 }
