--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -76,12 +76,18 @@
     border-left: 0.25rem solid var(--main-color);
     position: fixed;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    bottom: 0;
-    right: 0;
+    right: -500px;
     height: calc(100% - var(--header-height));
     width: 60%;
     background-color: var(--bg-color);
     z-index: -50;
+    transition: .3s ease-in-out;
   }
+
+  .navbarBottom__navMenu.active{
+    right: -1px
+  }
+
 
   .navbarBottom__navList {
     margin: auto;
