--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,11 +3,9 @@
   background-color: var(--bg-color);
   display: flex;
   align-items: center;
-  border: 2px solid green;
 }
 
 .about__container {
-  border: 2px solid green;
   position: relative;
   min-height: 65vh;
   width: 75%;
@@ -29,9 +27,33 @@
   right: 0;
   height: 100%;
   width: 50%;
-  opacity: .65;
-
+  opacity: .55;
 }
+
+.about__text{
+  position: absolute;
+  z-index: var(--z-fixed);
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0 1rem;
+}
+
+.about__text span{
+  color: var(--main-color);
+}
+
+
+.about__text p{
+  font-weight: var(--font-light);
+}
+
 
 /* FOR LARGE DEVICE */
 @media screen and (max-width: 992px) {
@@ -39,12 +61,44 @@
 
 /* FOR MEDIUM DEVICE */
 @media screen and (max-width: 768px) {
+  .about__overlay {
+    
+    width: 65%;
+
+  }
+
+  .about__text{
+
+    width: 65%;
+
+  }
 }
 
 /* FOR TABLET DEVICE */
 @media screen and (max-width: 576px) {
+
+  .about__overlay {
+    
+    width: 100%;
+
+  }
+
+  .about__text{
+
+    width: 100%;
+    padding: 0 .5rem;
+
+  }
+  .about__container {
+
+    width: 80%;
+
+  }
 }
 
 /* FOR SMALL DEVICE */
 @media screen and (max-width: 350px) {
+
+
+
 }
