--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  height: calc(100vh - var(--header-height));
+  min-height: calc(100vh - var(--header-height));
   margin-top: var(--header-height);
   width: 100%;
   position: relative;
@@ -31,6 +31,7 @@
   height: 100%;
   opacity: 0.75;
   z-index: var(--z-modal);
+  margin: 1px 0;
 }
 
 .hero__info {
