--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,8 @@
 
 html {
   scroll-behavior: smooth;
-  min-width: 320px;
+  min-width: 370px;
+  min-height: 100vh;
 }
 
 body,
@@ -98,8 +99,14 @@ img {
   max-width: 100%;
 }
 
+section{
+  padding: 4rem 0; 
+}
+
 .section__title{
-  font-size: var(--h1-font-size);
+  font-size: var(--big-font-size);
+  line-height: 3rem;
+  
 }
 
 .section__subtitle{
@@ -107,11 +114,11 @@ img {
 }
 
 /* LAYOUT */
-.container,
-.containerMain {
+.container {
   max-width: 968px;
   margin-left: auto;
   margin-right: auto;
+  width: 80%;
 }
 
 /* BUTTON */
@@ -138,11 +145,7 @@ img {
 
 /* FOR TABLET DEVICE */
 @media screen and (max-width: 576px) {
-  .containerMain {
 
-    width: 80%;
-
-  }
 }
 
 /* FOR SMALL DEVICE */
