--- a/src/components/Offer/Offer.css
+++ b/src/components/Offer/Offer.css
@@ -3,3 +3,15 @@
   background-color: var(--second-bg-color);
 }
 
+.offerCard__container{
+  border: 2px solid green;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 200px;
+  gap: 1rem;
+}
+
+.offerCard{
+  border: 2px solid green;
+
+}
