--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -25,7 +25,7 @@
   right: 0;
   height: 100%;
   width: 50%;
-  opacity: 0.55;
+  opacity: .6;
 }
 
 .about__text {
@@ -49,6 +49,8 @@
 
 .about__text p {
   font-weight: var(--font-light);
+  margin-top: var(--m-1);
+
 }
 
 /* FOR LARGE DEVICE */
