--- a/src/components/Offer/Offer.css
+++ b/src/components/Offer/Offer.css
@@ -6,24 +6,37 @@
 
 .offer__container{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 
+.offerCard{
+  cursor: pointer;
+  transition: .3s ease-in-out;
+}
+
+.offerCard:hover:hover{
+  scale: 1.1;
+}
+
+
+.section__subtitle{
+  color: var(--main-color);
+}
+
 .offerCard__container{
-  border: 2px solid green;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 200px); 
-  gap: 1rem;
+  gap: 2rem;
   text-align: center;
   width: 100%;
 }
 
 .offerCard{
   position: relative;
-  margin-top: var(--m-1);
-  border: 2px solid green;
+  margin-top: var(--m-2);
 }
 
 .offerCard__img{
@@ -46,10 +59,10 @@
   height: 100%;
   top: 0;
   right: 0;
-  opacity: .45;
+  opacity: .6;
 }
 
-.text{
+.offerCard__text{
   display: flex;
   position: absolute;
   justify-content: center;
@@ -57,6 +70,8 @@
   width: 100%;
   height: 100%;
   z-index: var(--z-fixed);
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1), 0px 8px 13px rgba(0, 0, 0, 0.4),
+  0px 18px 23px rgba(0, 0, 0, 0.4);
 }
 
 
