--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -66,6 +66,7 @@
   font-size: var(--normal-font-size);
   margin-bottom: var(--m-0-5);
   font-weight: var(--font-normal);
+  margin-bottom: var(--m-2);
 }
 
 .hero__button {
