--- a/src/components/Offer/Offer.css
+++ b/src/components/Offer/Offer.css
@@ -25,7 +25,7 @@
   color: var(--main-color);
 }
 
-.offerCard__container{
+.offer__cardContainer{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 200px); 
