--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   left: 0;
   background-color: var(--bg-color);
   z-index: var(--z-nav);
-  border-bottom: .5rem solid var(--main-color);
+  border-bottom: 0.5rem solid var(--main-color);
 }
 
 .navbarTop {
@@ -18,7 +18,7 @@
 
 .navbarTop__contact {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   font-size: var(--smaller-font-size);
   font-weight: var(--font-light);
   align-items: center;
@@ -63,6 +63,7 @@
 
 .navbarBottom__button {
   padding: 0.5rem 1rem;
+  white-space: nowrap;
 }
 
 .navbarBottom__menuIcon {
@@ -76,19 +77,20 @@
   .navbarBottom__navMenu {
     border-left: 0.25rem solid var(--main-color);
     position: fixed;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    bottom: 0;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+      rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    bottom: 0;
     right: -500px;
     height: calc(100% - var(--header-height));
     width: 60%;
     background-color: var(--bg-color);
     z-index: -50;
-    transition: .3s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 
-  .navbarBottom__navMenu.active{
-    right: -1px
+  .navbarBottom__navMenu.active {
+    right: -1px;
   }
-
 
   .navbarBottom__navList {
     margin: auto;
