--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -14,6 +14,9 @@
   left: 0;
   height: 100%;
   width: 100%;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
+  0px 8px 13px rgba(0,0,0,0.1), 
+  0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .hero img {
