--- a/src/components/Offer/Offer.css
+++ b/src/components/Offer/Offer.css
@@ -16,7 +16,7 @@
   transition: .3s ease-in-out;
 }
 
-.offerCard:hover:hover{
+.offerCard:hover{
   scale: 1.1;
 }
 
@@ -32,11 +32,15 @@
   gap: 2rem;
   text-align: center;
   width: 100%;
+  
 }
 
 .offerCard{
   position: relative;
   margin-top: var(--m-2);
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
+  0px 8px 13px rgba(0,0,0,0.1), 
+  0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .offerCard__img{
@@ -72,6 +76,31 @@
   z-index: var(--z-fixed);
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1), 0px 8px 13px rgba(0, 0, 0, 0.4),
   0px 18px 23px rgba(0, 0, 0, 0.4);
+}
+
+/* BREAKPOINTS */
+/* FOR LARGE DEVICE */
+@media screen and (max-width: 992px) {
+
+}
+
+/* FOR MEDIUM DEVICE */
+@media screen and (max-width: 768px) {
+
+}
+
+/* FOR TABLET DEVICE */
+@media screen and (max-width: 576px) {
+  .offer__cardContainer{
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 200px); 
+    gap: 1rem;
+  }
+}
+
+/* FOR SMALL DEVICE */
+@media screen and (max-width: 350px) {
+
 }
 
 
