--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
   min-height: calc(100% - var(--header-height));
   z-index: 100;
   background-color: var(--main-color);
-  opacity: 0.2;
+  opacity: 0.25;
   display: none;
 }
 
@@ -13,22 +13,30 @@
 }
 
 .popup__container {
-  margin: var(--header-height) 0;
-  position: fixed;
   z-index: 100;
-  top: 45%;
-  left: 50%;
-  width: 75%;
-  height: 70%;
-  transform: translate(-50%, -50%);
-  border: 5px solid var(--main-color);
-  transition: 0.3s ease-in-out;
+  overflow: hidden;
+  position: fixed;
+  margin: var(--header-height) 0;
   background-color: black;
-  display: flex;
+  transform: translate(-50%, -50%);
+  border: 2px solid var(--text-color);
+  top: 0%;
+  left: 0%;
+  max-width: 0%;
+  height: 0%;
+  display: none;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
+  0px 8px 13px rgba(0,0,0,0.1), 
+  0px 18px 23px rgba(0,0,0,0.1);
 }
 
-.popup__container.show{
-  
+.popup__container.show {
+  max-width: 70%;
+  width: 768px;
+  height: 70%;
+  top: 45%;
+  left: 50%;
+  display: flex;
 }
 
 .popup__left {
@@ -63,7 +71,10 @@
 .popup__button {
   display: inline-flex;
   justify-content: end;
+    cursor: pointer;
 }
+
+
 
 /* BREAKPOINTS */
 /* FOR LARGE DEVICE */
