--- a/src/components/Classes/Classes.css
+++ b/src/components/Classes/Classes.css
@@ -19,7 +19,6 @@
 
 .pricing__container{
   display: flex;
-  min-height: 50vh;
   width: 100%;
   gap: 2rem;
 }
@@ -46,46 +45,32 @@
 .info__title{
   color: var(--second-text-color);
   font-weight: var(--font-semi-bold);
-  font-size: 3.5rem;
+  font-size: 3rem;
 }
 
 .info__subTitle{
-  font-size: 2rem;
-}
-
-.pricing__right{
-  border: 2px solid green;
+  font-size: 1.75rem;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .pricing__right{
-  flex: 1;
+  flex: 2;
+}
 
+.product__title{
+  font-size: 1rem;
+}
+
+.price__container{
+  display: flex;
+  margin-bottom: 1.5rem;
+  align-items: center;
+  gap: .5rem;
+}
+
+.price__line{
+  width: 100%;
+  border-bottom: 1px dashed;
 
 }
 
