--- a/src/components/Classes/Classes.css
+++ b/src/components/Classes/Classes.css
@@ -32,7 +32,7 @@
 }
 
 .logo__left img{
-  max-width: 250px;
+  max-width: 200px;
 }
 
 .logo__text{
@@ -40,6 +40,7 @@
   border: 5px solid var(--text-color);
   background-color: var(--second-bg-color);
   width: 100%;
+  padding: 0 1rem;
 }
 
 .info__title{
@@ -49,7 +50,7 @@
 }
 
 .info__subTitle{
-  font-size: 1.75rem;
+  font-size: 1.7rem;
 }
 
 
@@ -63,7 +64,7 @@
 
 .price__container{
   display: flex;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   align-items: center;
   gap: .5rem;
 }
@@ -71,7 +72,13 @@
 .price__line{
   width: 100%;
   border-bottom: 1px dashed;
+}
 
+.disclaimer{
+  margin-top: var(--m-1);
+  text-align: center;
+  font-size: var(--small-font-size);
+  color: var(--second-bg-color);
 }
 
 /* BREAKPOINTS */
