--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,28 +1,34 @@
-.gallery{
+.gallery {
   min-height: calc(100vh - var(--header-height));
   background-color: var(--second-bg-color);
   display: flex;
 }
 
-.gallery__container{
+.gallery__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.instagramFeed__container{
+.image__container {
   display: grid;
-  grid-template-columns: repeat(6, 135px);
-  grid-template-rows: repeat(auto, 150px);
-  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(auto, 200px);
+  width: 100%;
+  gap: 1.5rem;
 }
 
-.postCard img{
+.imageCard {
+  border: 2px solid green;
   height: 100%;
-  box-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
-  0px 8px 13px rgba(0,0,0,0.1), 
-  0px 18px 23px rgba(0,0,0,0.1);
+  width: 100%;
+}
+
+.imageCard img {
+  object-fit: contain;
+  height: 100%;
+
 }
 
 .load__more{
@@ -36,31 +42,16 @@
 /* BREAKPOINTS */
 /* FOR LARGE DEVICE */
 @media screen and (max-width: 992px) {
-  .instagramFeed__container{
-    grid-template-columns: repeat(6, 100px);
-  }
-
 }
 
 /* FOR MEDIUM DEVICE */
 @media screen and (max-width: 768px) {
-  .instagramFeed__container{
-    grid-template-columns: repeat(4, 100px);
-  }
 }
 
 /* FOR TABLET DEVICE */
 @media screen and (max-width: 619px) {
-  .instagramFeed__container{
-    grid-template-columns: repeat(3, 130px);
-  }
 }
 
 /* FOR SMALL DEVICE */
 @media screen and (max-width: 450px) {
-  .instagramFeed__container{
-    grid-template-columns: repeat(3, 90px);
-  }
 }
-
-
