--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -20,15 +20,31 @@
 }
 
 .imageCard {
-  height: 100%;
+  position: relative;
   width: 100%;
 }
 
 .imageCard img {
   object-fit: contain;
-  height: 100%;
+  height: 150px;
   width: 100%;
+}
 
+.imageCard .delete__img{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: var(--z-fixed);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(209, 0, 0, 0.443);
+}
+
+.imageCard .trash-icon{
+  scale: 4;
 }
 
 .load__more{
