--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,6 +1,5 @@
 .login{
-  min-height: calc(100vh - var(--header-height));
-  margin-top: var(--header-height);
+  height: 100vh;
   width: 100%;
   background-color: var(--second-bg-color);
   position: relative;
@@ -33,7 +32,6 @@
 
 .right{
   flex: 1;
-  border: 5px solid pink;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,11 +39,17 @@
   padding: 0 1rem;
 }
 
+.right .login__title{
+  margin-bottom: 1rem;
+}
+
 .right form {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-bottom: 1rem;
+
 }
 
 .right textarea, 
