--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -9,9 +9,10 @@
 }
 
 .login__container {
-  height: 30rem;
-  width: 40rem;
+  height: 100%;
+  max-width: 100%;
   background-color: var(--bg-color);
+  padding: 0 2rem;
   border-radius: 1rem;
   display: flex;
   overflow: hidden;
@@ -27,7 +28,7 @@
 .left img{
   width: 15rem;
   height: 15rem;
-
+  
 }
 
 .right{
@@ -49,10 +50,9 @@
   align-items: center;
   width: 100%;
   margin-bottom: 1rem;
-
+  
 }
 
-.right textarea, 
 .right input {
   font-family: var(--body-font);
   height: 50px;
@@ -82,20 +82,29 @@
 /* BREAKPOINTS */
 /* FOR LARGE DEVICE */
 @media screen and (max-width: 992px) {
-
+  
 }
 
 /* FOR MEDIUM DEVICE */
 @media screen and (max-width: 768px) {
-
+  
 }
 
 /* FOR TABLET DEVICE */
 @media screen and (max-width: 576px) {
+  .login{
+    background-color: var(--bg-color);
+    border: 2px solid green;
+  }
 
+  .login__container {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /* FOR SMALL DEVICE */
 @media screen and (max-width: 350px) {
-
+  
 }
